src/scss/Wizard.scss
@import './variables.scss';

.wizard-page {
  max-width: 800px;
  margin: 0 auto;
  padding: 60px 0;
  position: relative;

  &::before {
    content: "";
    display: block;
    background: url('assets/elephant-friend-top.png');
    transform: scaleX(-1);
    position: absolute;
    width: 393px;
    height: 176px;
    z-index: -1;
    top: -32px;
    right: -50px;
  }

  h1 {
    font-family: 'Montserrat', sans-serif;
    font-weight: 600;
    font-size: 26px;
    margin-bottom: 30px - 8px;
    background: $darkest;
    color: lighten($vibrant, 8%);
    display: inline-block;
    padding: 8px 0;

    .lang-ar & {
      text-align: right;
    }
  }

  p {
    font-size: 16px;
    line-height: 24px;
    margin-bottom: 20px;

    .lang-ar & {
      direction: rtl;
    }

    strong {
      font-weight: 700;
      color: $lightest;
    }

    &.hint {
      color: $lighter;
      margin: 30px 0;
      display: flex;

      strong {
        display: block;
        flex: 0 0 auto;
        font-weight: 700;
        color: $lightest;
        margin-right: 10px;

        .lang-ar & {
          margin-right: 0;
          margin-left: 10px;
        }
      }

      span {
        display: block;
      }
    }
  }
}

.wizard-hint-container {
  display: flex;

  & > div:last-child {
    flex: 0 0 auto;
    margin-left: 15px;
    margin-top: 30px;
  }
}

@media only screen and (max-width: 640px) {
  .wizard-hint-container {
    flex-wrap: wrap;

    & > div {
      width: 100%;

      &:last-child {
        margin-top: 10px;
        margin-left: 0;
      }

      &:first-child {
        order: 1;
        margin-top: 20px;
      }
    }

    .button {
      box-sizing: border-box;
      width: 100%;
    }
  }
}

.wizard-hint {
  //background: lighten($darkest, 14%);
  //box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.2);
  //border-radius: 4px;
  display: flex;
  align-items: center;
  color: darken($lighter, 8%);
  //padding: 10px 16px;
  margin-top: 30px;
  font-size: 14px;
  line-height: 21px;

  &__icon {
    font-size: 40px;
    margin-right: 15px;
  }

  &__text {
    color: $lighter;
  }
}

.wizard {
  margin: 15px auto;
  max-width: 800px;

  &__row {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-column-gap: 10px;
    margin-bottom: 20px;
  }

  .wizard-card {
    background: lighten($darkest, 4%);
    border-radius: 4px;
    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.2);

    &__description {
      padding: 10px;
      font-size: 13px;
      line-height: 21px;
      color: darken($lighter, 12%);
    }

    &__hero {
      overflow: hidden;
      height: 130px;
      border-radius: 4px 4px 0 0;
      background: darken($darkest, 4%);

      img {
        width: 100%;
        height: 100%;
        object-fit: cover;
      }
    }

    &__row {
      display: flex;
      padding: 10px;
      align-items: center;
      background: lighten($darkest, 8%);
    }

    &__text {
      flex: 1 1 auto;
      font-size: 14px;

      strong {
        font-weight: 700;
      }
    }
  }

  .button {
    margin-right: 0;
    margin-bottom: 0;
    text-decoration: none;
    min-width: 60px;
    background: darken($success, 8%);
    color: $white;

    &:hover,
    &:focus,
    &:active {
      background: darken($success, 4%);
    }
  }

  .empty {
    min-height: 30vh;
    display: flex;
    align-items: center;
    justify-content: center;
    background: lighten($darkest, 4%);
    color: $lighter;
    border-radius: 4px;
    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.2);
  }

  .wizard-row {
    font-size: 14px;
    text-decoration: none;
    color: inherit;

    &__row {
      display: flex;
      justify-content: space-between;
    }

    &__more {
      padding: 10px;
      padding-top: 0;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      font-size: 13px;
      line-height: 21px;
      color: darken($lighter, 12%);
    }

    &__details {
      flex: 1 1 auto;
      padding: 10px 0;
    }

    &__meta {
      box-sizing: border-box;
      flex: 0 0 auto;
      width: 126px;
      padding: 10px;
      padding-top: 18px;

      .button {
        box-sizing: border-box;
        width: 100%;
      }

      .indicator-text {
        display: block;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
        position: relative;
        top: 12px;
      }
    }

    &__description {
      &__sep {
        display: inline-block;
        width: 10px;
      }
    }

    &__main {
      flex: 1 1 auto;
      max-width: calc(100% - 126px);
    }

    &__thumbnail {
      width: 90px;
      flex: 0 0 auto;
      padding: 10px 0;
      display: flex;

      & > div {
        margin: 0 10px;
        margin-right: 0;
        overflow: hidden;
        border-radius: 4px;
        width: 100%;
        height: 60px;
        position: relative;
        background: $darkest;

        img {
          display: block;
          position: absolute;
          top: 0;
          left: 0;
          width: 100%;
          height: 100%;
          object-fit: cover;
        }
      }
    }

    &:nth-child(even) {
      background: lighten($darkest, 2%);
    }
  }

  .wizard__list {
    background: lighten($darkest, 4%);
    color: $lighter;
    border-radius: 4px;
    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.2);
  }
}

.wizard-row__name {
  font-weight: 500;
  padding: 0 10px;
  padding-left: 13px;
}

.wizard-row__description {
  padding: 0 10px;
  padding-left: 13px;
  color: lighten($darkest, 34%);
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.indicator-text {
  font-weight: 500;

  .indicator {
    margin-right: 3px;
    margin-bottom: -1.5px;
  }

  &.green {
    color: $success;
  }

  &.yellow {
    color: #ca8f04;
  }

  &.red {
    color: $error;
  }
}

.indicator {
  display: inline-block;
  width: 14px;
  height: 14px;
  border-radius: 14px;

  &.green {
    background: $success;
  }

  &.yellow {
    background: #ca8f04;
  }

  &.red {
    background: $error;
  }
}

.wizard-controls {
  margin-top: 20px;
  margin-bottom: 30px;

  .row {
    display: flex;
    align-items: center;
  }

  &__label {
    font-size: 18px;
    font-weight: 500;
    margin-right: 10px;
    line-height: 44px;
    padding: 0 1rem;
  }

  .rrs {
    flex: 1 1 auto;
  }
}

@media only screen and (max-width: 640px) {
  .wizard-controls .row {
    display: block;
  }

  .wizard-controls .rrs {
    width: 100%;
  }

  .wizard-controls__label {
    display: none;
  }

  .wizard {
    .wizard-row__thumbnail {
      display: none;
    }
  }

  .wizard-row__name,
  .wizard-row__description {
    padding-left: 10px;
  }
}

@media only screen and (max-width: 800px) {
  .wizard-page {
    margin: 0;
    padding: 60px 20px;

    &::before {
      display: none;
    }

    h1 {
      display: block;
      text-align: center;
      margin-bottom: 10px;
    }

    p.lead {
      text-align: center;
    }
  }

  .wizard-controls {
    flex-wrap: wrap;
    margin-bottom: 0;
  }

  .wizard__row {
    display: block;

    .wizard-card {
      margin-bottom: 20px;
    }
  }

  .rrs,
  .wizard-controls__label {
    margin-bottom: 10px;
  }
}

/*
  React Responsive Select - Default styles
*/
.rrs {
  position: relative;
  box-sizing: border-box;
}

.rrs *,
.rrs *:before,
.rrs *:after {
  box-sizing: border-box;
}

.rrs__button {
  color: $lighter;
  position: relative;
  cursor: pointer;
  height: 44px;
  line-height: 44px;
  background: darken($darkest, 4%);
  border-radius: 4px;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

.rrs__button:focus {
  outline: 0;
}

.rrs__button + .rrs__options {
  list-style: none;
  padding: 0;
  margin: 0;
  background: darken($darkest, 4%);
  position: absolute;
  z-index: 2;
  border-top: 1px solid $darkest;
  border-radius: 0 0 4px 4px;
  top: 44px;
  width: 100%;
  height: 0;
  visibility: hidden;
  overflow: hidden;
  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
}

.rrs--options-visible .rrs__options {
  height: auto;
  visibility: visible;
  overflow-y: scroll;
  overflow-x: hidden;
  -webkit-overflow-scrolling: touch;
  max-height: 230px;
}

.rrs__option {
  cursor: pointer;
  padding: 0 1rem;
  height: 44px;
  line-height: 44px;
  margin: 0;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.rrs__option * {
  pointer-events: none;
}

.rrs__option:first-of-type {
  border-top: 0;
}

.rrs__option:focus {
  outline: 0;
}

.rrs__option:hover {
  background: $darkest;
  color: #fff;
}

.rrs__option:active {
  background: $darkest;
}

.rrs__option.rrs__option--next-selection {
  background: mix($darkest, $vibrant);
  color: #fff;
}

.rrs__option.rrs__option--selected {
  color: #fff;
}

.rrs__label {
  padding: 0 2rem 0 1rem;
  display: inline-flex;
  width: 100%;
  max-width: 100%;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  background: transparent;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  font-size: 18px;
  font-weight: 500;
}

.rrs--options-visible .rrs__label,
.rrs__button:focus .rrs__label {
  outline: 0;
}

.rrs__label {
  font-size: 18px;
  background: transparent;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.caret-icon {
  position: absolute;
  right: 0.8rem;
  top: 1.25rem;
  fill: $lighter;
}

.rrs--options-visible .caret-icon {
  transform: rotate(180deg);
}

.rrs__options {
  transition: all .2s cubic-bezier(0.19, 1, 0.22, 1);
  transition-property: max-height, opacity;
  max-height: 0;
  opacity: 0;
}

.rrs--options-visible .rrs__options {
  opacity: 1;
}

/*
  Multiselect overrides
*/
/*
.rrs__multiselect-label {
  display: inline-flex;
  max-width: 100%;
  line-height: 1;
}

.rrs__multiselect-label__text {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.rrs__multiselect-label__badge{
  border: 1px solid #ccc;
  padding: 1px 6px;
  margin: 0 0 0 4px;
  border-radius: 8px;
  color: #666;
  font-size: 11px;
  vertical-align: middle;
  display: inline-block;
}
*/

.covenant-banner {
  color: $success;
  margin-bottom: 20px;
  font-size: 16px;
  line-height: 24px;
  text-align: center;

  strong {
    font-weight: 700;
  }

  .link-button {
    color: lighten($vibrant, 8%);
    text-decoration: none;

    i {
      margin-left: 5px;
    }

    &:hover,
    &:focus,
    &:active {
      text-decoration: underline;
    }
  }
}

